--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-material-ui-carousel": "^2.3.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -21,6 +22,7 @@
     "react-slick": "^0.28.1",
     "react-spinners-kit": "^1.9.1",
     "react-text-transition": "^1.3.0",
+    "react-toastify": "^7.0.4",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-transform-remove-console": "^6.9.4"
   }
 }
